--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
