--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   cached_network_image: ^3.4.1
+  sliding_up_panel: ^2.0.0
 
 dev_dependencies:
   flutter_test:
