--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.6.5
   cached_network_image: ^3.4.1
   sliding_up_panel: ^2.0.0
+  epub_view: ^3.2.0
 
 dev_dependencies:
   flutter_test:
