--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.4.1
   sliding_up_panel: ^2.0.0
   epub_view: ^3.2.0
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
