--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sliding_up_panel: ^2.0.0
   epub_view: ^3.2.0
   provider: ^6.1.4
+  audioplayers: ^6.4.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,8 @@ flutter:
   assets:
     - assets/
     - assets/img/
+    - assets/audiobooks/
+    - assets/audiobooks/pequenoprincipe.mp3
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
